--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #2d769b;
+  background: #003166;
 }
 
 .clock {
@@ -20,7 +20,7 @@ body {
   align-items: center;
   background: url(clock.png);
   background-size: cover;
-  border: 4px solid #2d769b;
+  border: 4px solid #003166;
   border-radius: 50%;
   box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05),
     inset 0 -15px 15px rgba(255, 255, 255, 0.05),
@@ -77,7 +77,7 @@ body {
   position: absolute;
   width: 8px;
   height: 80px;
-  background: #ff105e;
+  background: #4CD964;
   z-index: 10;
   border-radius: 6px 6px 0 0;
 }
@@ -87,7 +87,7 @@ body {
   position: absolute;
   width: 4px;
   height: 90px;
-  background: #fff;
+  background: #FF9500;
   z-index: 11;
   border-radius: 6px 6px 0 0;
 }
@@ -97,7 +97,7 @@ body {
   position: absolute;
   width: 2px;
   height: 150px;
-  background: lightblue;
+  background: #5AC8FA;
   z-index: 12;
   border-radius: 6px 6px 0 0;
 }
