--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body {
   align-items: center;
   background: url(clock.png);
   background-size: cover;
-  border: 4px solid #003166;
+  border: 4px solid #2b70b9;
   border-radius: 50%;
   box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05),
     inset 0 -15px 15px rgba(255, 255, 255, 0.05),
