--- a/main.css
+++ b/main.css
@@ -122,7 +122,7 @@ body.light .mn:before{
   position: absolute;
   width: 2px;
   height: 150px;
-  background: #5AC8FA;
+  background: fuchsia;
   z-index: 12;
   border-radius: 6px 6px 0 0;
 }
